feat: implement RAG pipeline with OpenAI embeddings and Elasticsearch vector store